cluster/apps/proxitok/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxitok
  namespace: proxitok
spec:
  selector:
    matchLabels:
      app: proxitok
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: proxitok
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - proxitok
              topologyKey: "kubernetes.io/hostname"
      restartPolicy: Always
      containers:
        - name: proxitok
          image: quay.io/pussthecatorg/proxitok
          ports:
            - containerPort: 80
              protocol: TCP
              name: web
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 300
            periodSeconds: 30
