cluster/apps/proxitok/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxitok
  namespace: proxitok
spec:
  selector:
    app: proxitok
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
